--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,6 +5,13 @@ html, body {
   background: #222;
   width: 100%;
   height: 100%;
+  @at-root {
+    &.waiting {
+      * {
+        cursor: progress!important;
+      }
+    }
+  }
 }
 
 .img-box-container {
@@ -19,7 +26,9 @@ html, body {
       width: 360px;
       box-sizing: border-box;;
       border: 2px solid #fff;
-      // border-radius: 1px;
+      &.waiting {
+        visibility: hidden;
+      }
     }
     .load-more-btn {
       position: absolute;
@@ -29,10 +38,7 @@ html, body {
       line-height: 30px;
       background-color: lighten(#222, 1);
       text-align: center;
-      cursor: pointer;;
-      &.progress {
-        cursor: progress;;
-      }
+      cursor: pointer;
     }
   }
 }
