--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,7 +8,7 @@ html, body {
   @at-root {
     &.waiting {
       * {
-        cursor: progress!important;
+        cursor: progress!important; //全局 waiting 优先级高
       }
     }
   }
